--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ node_js:
 before_deploy: 
 - curl -fsSL https://clis.ng.bluemix.net/install/linux | sh
 - bx --version
-deploy: echo "I am deploying"
+deploy: 
+- script: echo "I am deploying"
