--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: node_js
 node_js:
 - node
 before_deploy: 
-  - curl -fsSL https://clis.ng.bluemix.net/install/linux | sh
+  - wget https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64
+  - mv linux64 Bluemix_CLI.tar.gz
+  - tar -xzvf Bluemix_CLI.tar.gz
+  - cd Bluemix_CLI
+  - sudo ./install_bluemix_cli
   - bx --version
 deploy: 
   script: echo "I am deploying"
