--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: node_js
+sudo: required
 node_js:
 - node
 before_deploy: 
-  - wget https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64
-  - mv linux64 Bluemix_CLI.tar.gz
-  - tar -xzvf Bluemix_CLI.tar.gz
-  - cd Bluemix_CLI
-  - sudo ./install_bluemix_cli
-  - bx --version
 deploy: 
-  script: echo "I am deploying"
+  provider: script
+  script: deploy.sh
   on:
     repo: ibm-watson-data-lab/sodashboard
     branch: travis
+  skip_cleanup: true
 
