--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: node_js
 sudo: required
 node_js:
 - node
+before_install:
+- set verbose_script_output "true"
 before_deploy: 
+- echo "Stand by..."
 deploy: 
   provider: script
   script: deploy.sh
