--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ before_install:
 - set verbose_script_output "true"
 before_deploy: 
 - echo "Stand by..."
+- wget https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64
+- mv linux64 Bluemix_CLI.tar.gz
+- tar -xzvf Bluemix_CLI.tar.gz
+- chmod a+x Bluemix_CLI/bin/bluemix
+- ./Bluemix_CLI/bin/bluemix --version
 deploy: 
   provider: script
   script: deploy.sh
