--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 before_install:
 - set verbose_script_output "true"
 before_deploy: 
+- set verbose_script_output "true"
 - echo "Stand by..."
 - wget https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64
 - mv linux64 Bluemix_CLI.tar.gz
