--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,14 @@ language: node_js
 sudo: required
 node_js:
 - node
-before_install:
-- set verbose_script_output "true"
 before_deploy: 
-- set verbose_script_output "true"
 - echo "Stand by..."
 - wget https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64
 - mv linux64 Bluemix_CLI.tar.gz
 - tar -xzvf Bluemix_CLI.tar.gz
 - chmod a+x Bluemix_CLI/bin/bluemix
 - ./Bluemix_CLI/bin/bluemix --version
+- ./Bluemix_CLI/bin/bluemix login --apikey $BXIAM
 deploy: 
   provider: script
   script: deploy.sh
