--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_deploy:
 - tar -xzvf Bluemix_CLI.tar.gz
 - chmod a+x Bluemix_CLI/bin/bluemix
 - ./Bluemix_CLI/bin/bluemix --version
+- ./Bluemix_CLI/bin/bluemix update
 - ./Bluemix_CLI/bin/bluemix api https://api.ng.bluemix.net
 - ./Bluemix_CLI/bin/bluemix login --apikey $BXIAM
 - ./Bluemix_CLI/bin/bluemix target -o Watson-Data-Lab -s stackoverflow
